Translations up to date 7/7/22

--- a/localization/eng/AigisMod-Character-Strings.json
+++ b/localization/eng/AigisMod-Character-Strings.json
@@ -31,5 +31,16 @@
       "You prepare your Final Trump Card against the heart.",
       "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~hunter,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
     ]
+  },
+  "aigisMod:TheDarkKnightCharacter": {
+    "NAMES": [
+      "The Dark Knight",
+      "the Dark Knight"
+    ],
+    "TEXT": [
+      "A warrior who became a living armor is guided by the voice of the stars. NL Through the Spire, he might make an important discovery.",
+      "You are about to use the special technique against the heart.",
+      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~knight,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+    ]
   }
 }
