--- a/localization/eng/AigisMod-UI-Strings.json
+++ b/localization/eng/AigisMod-UI-Strings.json
@@ -121,6 +121,12 @@
     ]
   },
 
+  "KagerouAction": {
+    "TEXT": [
+      "Discard."
+    ]
+  },
+
   "AirshipAction": {
     "TEXT": [
       "Select an Imperial card to add to your hand.",
@@ -267,6 +273,47 @@
   "HeroCrystalText": {
     "TEXT": [
       "Viewing the Hero cards."
+    ]
+  },
+
+  "SumireAction": {
+    "TEXT": [
+      "Choose a card to add to your hand.",
+      "I don't have a Meteor or Eastern card in Draw Pile..."
+    ]
+  },
+
+  "NielAction": {
+    "TEXT": [
+      "Select a cost 1 or lower card to add to hand.",
+      "I don't have any cost 1 or lower Card in Discard Pile..."
+    ]
+  },
+
+  "ErunAction": {
+    "TEXT": [
+      "Choose a card to add to your hand.",
+      "I don't have a Release card in Draw Pile..."
+    ]
+  },
+
+  "NephtyAction": {
+    "TEXT": [
+      "to reduce it's cost for the turn."
+    ]
+  },
+
+  "VivianAction": {
+    "TEXT": [
+      "to reduce it's cost for the combat."
+    ]
+  },
+
+  "AngelMaidAction": {
+    "TEXT": [
+      "Choose a card to add to your hand.",
+      "Choose cards to add to your hand.",
+      "I don't have a Release card in my draw pile..."
     ]
   }
 }
