--- a/localization/jpn/AigisMod-Character-Strings.json
+++ b/localization/jpn/AigisMod-Character-Strings.json
@@ -31,5 +31,16 @@
       "あなたは心臓に対して最後の切り札を構え…",
       "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「狩人よ我らと共に、そして塔の温もりを肌で感じるのだ」"
     ]
+  },
+  "aigisMod:TheDarkKnightCharacter": {
+    "NAMES": [
+      "The Dark Knight",
+      "the Dark Knight"
+    ],
+    "TEXT": [
+      "A warrior who became a living armor is guided by the voice of the stars. NL Through the Spire, he might make an important discovery.",
+      "You are about to use the special technique against the heart.",
+      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~knight,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+    ]
   }
 }
