--- a/localization/jpn/AigisMod-Keyword-Strings.json
+++ b/localization/jpn/AigisMod-Keyword-Strings.json
@@ -306,5 +306,61 @@
       "魔導生命体。"
     ],
     "DESCRIPTION": "戦闘開始時、 #b2 種類の #yラーワル カードをデッキに加える。 これらは、このカードと同じ量のアップグレードを持ちます。"
+  },
+  {
+    "NAMES": [
+      "Meteor",
+      "Meteor.",
+      "meteor",
+      "meteor."
+    ],
+    "DESCRIPTION": "Orb: Deal damage to a random enemy. Increases damage the more meteor cards you play."
+  },
+  {
+    "PROPER_NAME": "Dark Fighter",
+    "NAMES": [
+      "Dark Fighter",
+      "Dark_fighter.",
+      "Dark_fighter",
+      "dark_fighter"
+    ],
+    "DESCRIPTION": "If this is in #yhand when you gain #yBlock, reduce this card cost by #b1 for the turn."
+  },
+  {
+    "NAMES": [
+      "Lifelink",
+      "Lifelink.",
+      "lifelink",
+      "lifelink."
+    ],
+    "DESCRIPTION": "Enemy loses HP equal to the damage you block completely. Reduced by #b1 when you use a cost #b1 or higher Attack."
+  },
+  {
+    "NAMES": [
+      "Fortress",
+      "Fortress:",
+      "fortress",
+      "fortress:"
+    ],
+    "DESCRIPTION": "Gain this effect when your Block is equal or higher than this amount."
+  },
+  {
+    "NAMES": [
+      "Armor",
+      "Armor:",
+      "armor",
+      "armor:"
+    ],
+    "DESCRIPTION": "#yUnplayable unless your Block is equal or higher than this amount."
+  },
+  {
+    "NAMES": [
+      "Release",
+      "Release:",
+      "release",
+      "release:"
+    ],
+    "DESCRIPTION": "Gain this effect when your block is 0 or while you have Blur."
   }
+
 ]
